<resources>
    <string name="app_name">CF-Tunnel</string>
    <string name="token_hint">Tunnel Token</string>
    <string name="start_tunnel">Start Tunnel</string>
    <string name="stop_tunnel">Stop Tunnel</string>
    <string name="auto_start">Auto Start on Boot</string>
    <string name="clear_logs">Clear Logs</string>
    <string name="status_stopped">Status: Stopped</string>
    <string name="status_running">Status: Running</string>
    <string name="status_reconnecting">Status: Reconnecting...</string>
    <string name="request_battery_opt">Ignore Battery Opt</string>
</resources>
